Dark Mode inside Tabs Fixed

--- a/css/get-involved_change.css
+++ b/css/get-involved_change.css
@@ -129,7 +129,7 @@
 .tab-content {
   max-height: 0;
   padding: 0 1em;
-
+  color: black;
   transition: all 0.35s;
 }
 .tab-close {
